# lyricsgrabber

./: AUTHORS  MANIFEST.in  Makefile.am  NEWS  README  TODO  configure.ac  setup.py  setup.py.in
doc/: README.t2t  lyricsgrabber.nroff
m4/: pylibcheck.m4
src/: lyricsgrabber  lyricsgrabber-gui.py  lyricsgrabber.py
src/LyricsGrabber/: ClTrawler.py  LlTrawler.py  Logger.py  TagHandler.py  Timer.py  Trawler.py  Walker.py  __init__.py
src/gui/: dirchooser.glade  lyricsedit.glade  lyricsgrabber.glade
src/lyricsgrabber/: __init__.py  cl_trawler.py  ll_trawler.py  logger.py  lw_trawler.py  taghandler.py  timer.py  trawler.py  walker.py
